# snake-bevy

./: .gitignore  Cargo.toml  Makefile.toml
cli/: Cargo.toml  main.rs
core/: Cargo.toml  lib.rs
core/plugins/: mod.rs  snake.rs  terrain.rs
