[workspace]
members = ["cli", "core"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
snake_core = { path = "../core" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3